--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <p>Here's a picture of a cute cat:</p>
 
-        <img src="https://placekitten.com/200/300" alt="A cute kitten"
+        <img style="display: block;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="file:///C:/Users/USER-PC/OneDrive%20-%20Botswana%20Accountancy%20College/Desktop/cute%20kitten.jpg" width="981" height="552"> alt="A cute kitten"
 
 
         <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
