--- a/index.html
+++ b/index.html
@@ -10,39 +10,109 @@
 
     <title>My First GitHub Page</title>
 
+    <!-- Bootstrap -->
+
+    <link href="https.//cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+
     <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
 
+    <!-- Your content goes here -->
+
+
+    <!-- Bootsrap JS and dependencies -->
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+
     <header>
 
-        <h1>Welcome to My Website!</h1>
+        <nav class="navbar navbar-expand-lg navbar-dark">
 
-        <nav>
+            <div class="container">
 
-            <a href="index.html">Home</a>
+                <a class="navbar-brand" href="index.html">My Website</a>
 
-            <a href="about.html">About</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
 
-            <a href="contact.html">Contact</a>
+                    <span class="navbar-toggler-icon"></span>
+
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+
+                    <ul class="navbar-nav">
+
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="index.html">Home</a>
+
+                        </li>
+
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="about.html">About</a>
+
+                        </li>
+
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="contact.html">Contact</a>
+
+                        </li>
+
+                    </ul>
+
+                </div>
+
+            </div>
             
         </nav>
 
     </header>
 
 
-    <main>
+    <main class="container my-5">
 
-        <p>This is a simple webpage hosted on GitHub Pages.</p>
+        <div class="row">
 
-        <p>Here's a picture of a cute cat:</p>
+            <div class="col-md-8">
 
-        <img style="display: block;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="file:///C:/Users/USER-PC/OneDrive%20-%20Botswana%20Accountancy%20College/Desktop/cute%20kitten.jpg" width="981" height="552"> alt="A cute kitten"
+                <h2>Welcome to My Website!</h2>
 
+                <p>This is a simple webpage hosted on GitHub Pages.</p>
 
-        <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
+                <p>Here's a picture of a cute cat:</p>
+
+                <img style="display: block;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="file:///C:/Users/USER-PC/OneDrive%20-%20Botswana%20Accountancy%20College/Desktop/cute%20kitten.jpg" width="981" height="552">
+
+                <p class="mt-3">Visit <a href="https://github.com" class="btn btn-primary">GitHub</a> to learn more about coding.</p>
+
+            </div>
+
+            <div class="col-md-4">
+
+                <div class="card">
+
+                    <div class="card-body">
+
+                        <h5 class="card-title">Did You Know?</h5>
+
+                        <p class="card-text">GitHub Pages is a service to host static websites directly from your GitHub repository.</p>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
 
     </main>
     
