git add . git commit -m"Changes" git push origin main

--- a/my website.html
+++ b/my website.html
@@ -145,13 +145,13 @@
     <section id="vehicles" class="vehicles">
         <h2>Featured Sports Vehicles</h2>
         <div class="vehicle-card">
-            <img src="images/car1.jpg" alt="Sports Car">
+            <img src="images/download.jpg" alt="Sports Car">
             <h3>Ferrari 488</h3>
             <p>A powerful sports car with a V8 engine.</p>
         </div>
         <div class="vehicle-card">
-            <img src="images/bike1.jpg" alt="Sports Bike">
-            <h3>Ducati Panigale</h3>
+            <img src="images/panigale-v46756c46e25a7a.avif" alt="Sports Bike">
+            <h3>Ducati Panigale v4</h3>
             <p>Superbike performance with an aggressive design.</p>
         </div>
     </section>
