git add git commit -m"changes" git push origin main

--- a/football/index.html
+++ b/football/index.html
@@ -21,7 +21,7 @@
 
   <main class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 max-w-6xl mx-auto p-6">
 <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-  <img src="https://example.com/barcelona-jersey.jpg" alt="Barcelona Jersey" class="w-full h-64 object-cover">
+  <img src="images/IMG-3679.webp" alt="Barcelona Jersey" class="w-full h-64 object-cover">
     <div class="p-4">
       <h2 class="text-xl font-semibold">FC Barcelona Home Jersey 2024</h2>
       <p class="text-green-600 text-lg my-2">$59.99</p>
@@ -30,7 +30,7 @@
   </div>
   
   <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-    <img src="https://example.com/real-madrid-jersey.jpg" alt="Real Madrid Jersey" class="w-full h-64 object-cover">
+    <img src="images/real-madrid-fc-2024-25-mens-replica-away-jersey-football-soccer-by-adidas-1_800x.webp" alt="Real Madrid Jersey" class="w-full h-64 object-cover">
     <div class="p-4">
       <h2 class="text-xl font-semibold">Real Madrid Away Jersey 2024</h2>
       <p class="text-green-600 text-lg my-2">$62.99</p>
@@ -39,7 +39,7 @@
   </div>
   
   <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-    <img src="https://example.com/psg-jersey.jpg" alt="PSG Jersey" class="w-full h-64 object-cover">
+    <img src="images/psg-nike-home-stadium-shirt-2024-25_ss5_p-200827669+pv-2+u-zsehjrrtq4aszhqrqd0f+v-gfgancmusfnavrx7ghgz.jpg" alt="PSG Jersey" class="w-full h-64 object-cover">
     <div class="p-4">
       <h2 class="text-xl font-semibold">PSG Home Jersey 2024</h2>
       <p class="text-green-600 text-lg my-2">$54.99</p>
@@ -48,7 +48,7 @@
   </div>
   
   <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-    <img src="https://example.com/juventus-jersey.jpg" alt="Juventus Jersey" class="w-full h-64 object-cover">
+    <img src="images/436495120_17886286461026859_5644735042795605099_n.webp" alt="Juventus Jersey" class="w-full h-64 object-cover">
     <div class="p-4">
       <h2 class="text-xl font-semibold">Juventus Home Jersey 2024</h2>
       <p class="text-green-600 text-lg my-2">$58.99</p>
@@ -57,7 +57,7 @@
   </div>
   
   <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-    <img src="https://example.com/bayern-jersey.jpg" alt="Bayern Munich Jersey" class="w-full h-64 object-cover">
+    <img src="images/8712c956802dfcf7bb746c4525956f00.jpg" alt="Bayern Munich Jersey" class="w-full h-64 object-cover">
     <div class="p-4">
       <h2 class="text-xl font-semibold">Bayern Munich Away Jersey 2024</h2>
       <p class="text-green-600 text-lg my-2">$61.99</p>
@@ -66,7 +66,7 @@
   </div>
   
     <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-      <img src="https://example.com/pirates-jersey.jpg" alt="Orlando Pirates Jersey" class="w-full h-64 object-cover">
+      <img src="images/JJ2287_FL-1-copy.png" alt="Orlando Pirates Jersey" class="w-full h-64 object-cover">
       <div class="p-4">
         <h2 class="text-xl font-semibold">Orlando Pirates Home Jersey 2024</h2>
         <p class="text-green-600 text-lg my-2">$49.99</p>
@@ -75,7 +75,7 @@
     </div>
 
     <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-      <img src="https://example.com/chiefs-jersey.jpg" alt="Kaizer Chiefs Jersey" class="w-full h-64 object-cover">
+      <img src="images/Prod_331Q7QW-S02_35-83677.webp" alt="Kaizer Chiefs Jersey" class="w-full h-64 object-cover">
       <div class="p-4">
         <h2 class="text-xl font-semibold">Kaizer Chiefs Away Jersey 2024</h2>
         <p class="text-green-600 text-lg my-2">$47.99</p>
@@ -84,7 +84,7 @@
     </div>
 
     <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-      <img src="https://example.com/bafana-jersey.jpg" alt="Bafana Bafana Jersey" class="w-full h-64 object-cover">
+      <img src="images/1171476_1171476-684_001.webp" alt="Bafana Bafana Jersey" class="w-full h-64 object-cover">
       <div class="p-4">
         <h2 class="text-xl font-semibold">Bafana Bafana Jersey 2024</h2>
         <p class="text-green-600 text-lg my-2">$44.99</p>
