--- a/football/about.html
+++ b/football/about.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us - Football T-Shirt Store</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-gray-100">
     <nav class="bg-white shadow p-4 flex justify-center gap-6 text-blue-600 font-medium">
