git add git commit -m"changes" git push origin main

--- a/football/about.html
+++ b/football/about.html
@@ -14,10 +14,22 @@
         <a href="about.html" class="hover:underline">About</a>
         <a href="contact.html" class="hover:underline">Contact</a>
         <a href="checkout.html" class="hover:underline">Checkout</a>
+        <a href="products.html" class="btn btn-primary mx-2">View Products</a>
+        <a href="services.html" class="btn btn-secondary mx-2">Our Services</a>
       </nav>      
   <div class="max-w-2xl mx-auto p-6 mt-10 bg-white rounded-2xl shadow">
     <h1 class="text-3xl font-bold mb-4">About Us</h1>
     <p>We are passionate football fans who believe in quality, affordability, and team spirit. We started this store to help fans show off their pride with top-tier jerseys from their favorite teams. Whether you're cheering from the stadium or from home, we've got you covered.</p>
   </div>
+   <footer class="bg-dark text-white py-4 mt-5">
+    <div class="container text-center">
+      <p class="mb-2">Subscribe to our newsletter for the latest updates and offers</p>
+      <form class="d-flex justify-content-center mb-3">
+        <input type="email" class="form-control w-50" placeholder="Enter your email">
+        <button class="btn btn-primary ms-2">Subscribe</button>
+      </form>
+      <p>&copy; 2025 Football T-Shirt Store. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
