--- a/football/checkout.html
+++ b/football/checkout.html
@@ -26,5 +26,15 @@
       <button type="submit" class="bg-green-600 text-white py-2 rounded hover:bg-green-700">Place Order</button>
     </form>
   </div>
+   <footer class="bg-dark text-white py-4 mt-5">
+    <div class="container text-center">
+      <p class="mb-2">Subscribe to our newsletter for the latest updates and offers</p>
+      <form class="d-flex justify-content-center mb-3">
+        <input type="email" class="form-control w-50" placeholder="Enter your email">
+        <button class="btn btn-primary ms-2">Subscribe</button>
+      </form>
+      <p>&copy; 2025 Football T-Shirt Store. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
