--- a/football/contact.html
+++ b/football/contact.html
@@ -14,6 +14,8 @@
         <a href="about.html" class="hover:underline">About</a>
         <a href="contact.html" class="hover:underline">Contact</a>
         <a href="checkout.html" class="hover:underline">Checkout</a>
+        <a href="products.html" class="btn btn-primary mx-2">View Products</a>
+        <a href="services.html" class="btn btn-secondary mx-2">Our Services</a>
       </nav>       
   <div class="max-w-2xl mx-auto p-6 mt-10 bg-white rounded-2xl shadow">
     <h1 class="text-3xl font-bold mb-4">Contact Us</h1>
@@ -24,5 +26,15 @@
       <button type="submit" class="bg-blue-600 text-white py-2 rounded hover:bg-blue-700">Send Message</button>
     </form>
   </div>
+   <footer class="bg-dark text-white py-4 mt-5">
+    <div class="container text-center">
+      <p class="mb-2">Subscribe to our newsletter for the latest updates and offers</p>
+      <form class="d-flex justify-content-center mb-3">
+        <input type="email" class="form-control w-50" placeholder="Enter your email">
+        <button class="btn btn-primary ms-2">Subscribe</button>
+      </form>
+      <p>&copy; 2025 Football T-Shirt Store. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
