--- a/football/index.html
+++ b/football/index.html
@@ -1,100 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Football T-Shirt Store</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Football T-Shirt Store | Home</title>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 text-gray-800">
-    <nav class="bg-white shadow p-4 flex justify-center gap-6 text-blue-600 font-medium">
-        <a href="index.html" class="hover:underline">Home</a>
-        <a href="about.html" class="hover:underline">About</a>
-        <a href="contact.html" class="hover:underline">Contact</a>
-        <a href="checkout.html" class="hover:underline">Checkout</a>
-      </nav>      
-  <header class="text-center py-8 bg-white shadow">
-    <h1 class="text-4xl font-bold">Football T-Shirt Store</h1>
-    <p class="text-gray-600 mt-2">Get your favourite team jerseys today!</p>
+<body class="bg-light text-dark">
+  <!-- Hero Section -->
+  <header class="bg-dark text-white text-center py-5 mb-4">
+    <h1 class="display-4">Welcome to the Ultimate Football T-Shirt Store!</h1>
+    <p class="lead">Shop authentic and stylish jerseys from your favorite European football clubs.</p>
+    <a href="products.html" class="btn btn-success btn-lg mt-3">Explore Products</a>
   </header>
 
-  <main class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 max-w-6xl mx-auto p-6">
-<div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-  <img src="images/IMG-3679.webp" alt="Barcelona Jersey" class="w-full h-64 object-cover">
-    <div class="p-4">
-      <h2 class="text-xl font-semibold">FC Barcelona Home Jersey 2024</h2>
-      <p class="text-green-600 text-lg my-2">$59.99</p>
-      <button class="w-full bg-black text-white py-2 rounded hover:bg-gray-800">Add to Cart</button>
-    </div>
-  </div>
-  
-  <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-    <img src="images/real-madrid-fc-2024-25-mens-replica-away-jersey-football-soccer-by-adidas-1_800x.webp" alt="Real Madrid Jersey" class="w-full h-64 object-cover">
-    <div class="p-4">
-      <h2 class="text-xl font-semibold">Real Madrid Away Jersey 2024</h2>
-      <p class="text-green-600 text-lg my-2">$62.99</p>
-      <button class="w-full bg-black text-white py-2 rounded hover:bg-gray-800">Add to Cart</button>
-    </div>
-  </div>
-  
-  <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-    <img src="images/psg-nike-home-stadium-shirt-2024-25_ss5_p-200827669+pv-2+u-zsehjrrtq4aszhqrqd0f+v-gfgancmusfnavrx7ghgz.jpg" alt="PSG Jersey" class="w-full h-64 object-cover">
-    <div class="p-4">
-      <h2 class="text-xl font-semibold">PSG Home Jersey 2024</h2>
-      <p class="text-green-600 text-lg my-2">$54.99</p>
-      <button class="w-full bg-black text-white py-2 rounded hover:bg-gray-800">Add to Cart</button>
-    </div>
-  </div>
-  
-  <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-    <img src="images/436495120_17886286461026859_5644735042795605099_n.webp" alt="Juventus Jersey" class="w-full h-64 object-cover">
-    <div class="p-4">
-      <h2 class="text-xl font-semibold">Juventus Home Jersey 2024</h2>
-      <p class="text-green-600 text-lg my-2">$58.99</p>
-      <button class="w-full bg-black text-white py-2 rounded hover:bg-gray-800">Add to Cart</button>
-    </div>
-  </div>
-  
-  <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-    <img src="images/8712c956802dfcf7bb746c4525956f00.jpg" alt="Bayern Munich Jersey" class="w-full h-64 object-cover">
-    <div class="p-4">
-      <h2 class="text-xl font-semibold">Bayern Munich Away Jersey 2024</h2>
-      <p class="text-green-600 text-lg my-2">$61.99</p>
-      <button class="w-full bg-black text-white py-2 rounded hover:bg-gray-800">Add to Cart</button>
-    </div>
-  </div>
-  
-    <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-      <img src="images/JJ2287_FL-1-copy.png" alt="Orlando Pirates Jersey" class="w-full h-64 object-cover">
-      <div class="p-4">
-        <h2 class="text-xl font-semibold">Orlando Pirates Home Jersey 2024</h2>
-        <p class="text-green-600 text-lg my-2">$49.99</p>
-        <button class="w-full bg-black text-white py-2 rounded hover:bg-gray-800">Add to Cart</button>
-      </div>
-    </div>
+  <!-- Featured Teams -->
+  <section class="container">
+    <h2 class="text-center mb-4">Featured Kits</h2>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
 
-    <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-      <img src="images/Prod_331Q7QW-S02_35-83677.webp" alt="Kaizer Chiefs Jersey" class="w-full h-64 object-cover">
-      <div class="p-4">
-        <h2 class="text-xl font-semibold">Kaizer Chiefs Away Jersey 2024</h2>
-        <p class="text-green-600 text-lg my-2">$47.99</p>
-        <button class="w-full bg-black text-white py-2 rounded hover:bg-gray-800">Add to Cart</button>
+      <!-- Product Cards -->
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/FullSizeRender_7e900be6-73fa-43c1-8dac-da6af1d02568_800x.webp" class="card-img-top" alt="Manchester United Away Jersey">
+          <div class="card-body">
+            <h5 class="card-title">Man Utd Away Jersey 2024</h5>
+            <p class="card-text">Classic red with a modern twist. Show your pride today!</p>
+            <a href="checkout.html" class="btn btn-primary">Buy Now</a>
+          </div>
+        </div>
       </div>
-    </div>
 
-    <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-      <img src="images/1171476_1171476-684_001.webp" alt="Bafana Bafana Jersey" class="w-full h-64 object-cover">
-      <div class="p-4">
-        <h2 class="text-xl font-semibold">Bafana Bafana Jersey 2024</h2>
-        <p class="text-green-600 text-lg my-2">$44.99</p>
-        <button class="w-full bg-black text-white py-2 rounded hover:bg-gray-800">Add to Cart</button>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/mancity.webp" class="card-img-top" alt="Manchester City Home Jersey">
+          <div class="card-body">
+            <h5 class="card-title">Man City Home Jersey 2024</h5>
+            <p class="card-text">Iconic sky blue for the reigning champions. Limited stock!</p>
+            <a href="checkout.html" class="btn btn-primary">Buy Now</a>
+          </div>
+        </div>
       </div>
-    </div>
-  </main>
 
-  <footer class="text-center text-sm text-gray-500 mt-10 pb-6">
-    &copy; 2025 Football T-Shirt Store. All rights reserved.
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/IMG-3679.webp" class="card-img-top" alt="Barcelona Home Jersey">
+          <div class="card-body">
+            <h5 class="card-title">Barcelona Home Jersey 2024</h5>
+            <p class="card-text">Support Barça in the bold and beautiful stripes.</p>
+            <a href="checkout.html" class="btn btn-primary">Buy Now</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Navigation Links -->
+  <footer class="text-center mt-5 py-4 bg-dark text-white">
+    <p>Browse our <a href="services.html" class="text-success">Services</a>, <a href="products.html" class="text-success">Products</a>, <a href="checkout.html" class="text-success">Checkout</a>, <a href="about.html" class="text-success">About</a>, or <a href="contact.html" class="text-success">Contact Us</a>.</p>
+    <p>Follow us on 
+      <a href="https://instagram.com" target="_blank" class="text-info">Instagram</a>, 
+      <a href="https://facebook.com" target="_blank" class="text-primary">Facebook</a>, 
+      <a href="https://twitter.com" target="_blank" class="text-light">Twitter</a>.
+    </p>
+    <p>&copy; 2025 Football T-Shirt Store. All rights reserved.</p>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
