git add git commit -m"changes" git push origin main

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <div class="card-body">
             <h5 class="card-title">Man Utd Away Jersey 2024</h5>
             <p class="card-text">Classic red with a modern twist. Show your pride today!</p>
+            <p class="text-green-600 text-lg my-2">P500</p>
             <a href="checkout.html" class="btn btn-primary">Buy Now</a>
           </div>
         </div>
@@ -38,6 +39,7 @@
           <div class="card-body">
             <h5 class="card-title">Man City Home Jersey 2024</h5>
             <p class="card-text">Iconic sky blue for the reigning champions. Limited stock!</p>
+            <p class="text-green-600 text-lg my-2">P500</p>
             <a href="checkout.html" class="btn btn-primary">Buy Now</a>
           </div>
         </div>
@@ -49,6 +51,7 @@
           <div class="card-body">
             <h5 class="card-title">Barcelona Home Jersey 2024</h5>
             <p class="card-text">Support Barça in the bold and beautiful stripes.</p>
+            <p class="text-green-600 text-lg my-2">P500</p>
             <a href="checkout.html" class="btn btn-primary">Buy Now</a>
           </div>
         </div>
