--- a/products.html
+++ b/products.html
@@ -22,7 +22,8 @@
           <div class="card-body">
             <h5 class="card-title">Man City Home Kit 2024</h5>
             <p class="card-text">Sky blue with modern accents. Available now!</p>
-            <a href="checkout.html" class="btn btn-primary">Buy</a>
+            <p class="text-green-600 text-lg my-2">P500</p>
+            <a href="checkout.html" class="btn btn-primary">Buy </a>
           </div>
         </div>
       </div>
@@ -32,6 +33,7 @@
           <div class="card-body">
             <h5 class="card-title">Man Utd Away Kit 2024</h5>
             <p class="card-text">A bold design for a bold team.</p>
+            <p class="text-green-600 text-lg my-2">P500</p>
             <a href="checkout.html" class="btn btn-primary">Buy</a>
           </div>
         </div>
@@ -42,6 +44,7 @@
           <div class="card-body">
             <h5 class="card-title">Real Madrid Home Kit</h5>
             <p class="card-text">White elegance from the Bernabéu.</p>
+            <p class="text-green-600 text-lg my-2">P500</p>
             <a href="checkout.html" class="btn btn-primary">Buy</a>
           </div>
         </div>
@@ -52,6 +55,7 @@
           <div class="card-body">
             <h5 class="card-title">PSG Home Kit 2024</h5>
             <p class="card-text">Parisian style meets sporting excellence.</p>
+            <p class="text-green-600 text-lg my-2">P500</p>
             <a href="checkout.html" class="btn btn-primary">Buy</a>
           </div>
         </div>
@@ -62,6 +66,7 @@
           <div class="card-body">
             <h5 class="card-title">Barcelona Home Kit 2024</h5>
             <p class="card-text">Traditional stripes with a modern touch.</p>
+            <p class="text-green-600 text-lg my-2">P500</p>
             <a href="checkout.html" class="btn btn-primary">Buy</a>
           </div>
         </div>
@@ -72,6 +77,7 @@
           <div class="card-body">
             <h5 class="card-title">Juventus Home Kit 2024</h5>
             <p class="card-text">Black and white legacy from Turin.</p>
+            <p class="text-green-600 text-lg my-2">P500</p>
             <a href="checkout.html" class="btn btn-primary">Buy</a>
           </div>
         </div>
@@ -82,6 +88,7 @@
           <div class="card-body">
             <h5 class="card-title">Bayern Munich Home Kit 2024</h5>
             <p class="card-text">Bold red with Bavarian pride.</p>
+            <p class="text-green-600 text-lg my-2">P500</p>
             <a href="checkout.html" class="btn btn-primary">Buy</a>
           </div>
         </div>
@@ -92,6 +99,7 @@
           <div class="card-body">
             <h5 class="card-title">AC Milan Home Kit 2024</h5>
             <p class="card-text">Rossoneri stripes with iconic style.</p>
+            <p class="text-green-600 text-lg my-2">P500</p>
             <a href="checkout.html" class="btn btn-primary">Buy</a>
           </div>
         </div>
